apps/base/smart-home/node-red/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - name: node-red
          image: artifactory.local.hejsan.xyz/docker/nodered/node-red:4.1.16-20@sha256:a8bd183a48b9f982d8a1e103255b9183e1c869d09e94e511a47cccb561f2f223
          ports:
            - containerPort: 1880
              name: http
          volumeMounts:
            - name: node-red-data-pvc
              mountPath: /data
          resources:
            limits:
              memory: 500Mi
              cpu: "1"
            requests:
              memory: 320Mi
              cpu: "0.1"
      volumes:
        - name: node-red-data-pvc
          persistentVolumeClaim:
            claimName: node-red-data-pvc-node-red-0
