apps/base/smart-home/node-red/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-red
spec:
  serviceName: node-red
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - name: node-red
          image: artifactory.local.hejsan.xyz/docker/nodered/node-red:4.1.1-20@sha256:a840dff7e3f704466600d9e4660d46a9f795c589bf9be20a5727c636a8125563
          ports:
            - containerPort: 1880
              name: http
          volumeMounts:
            - name: node-red-data-pvc
              mountPath: /data
          resources:
            limits:
              memory: 500Mi
              cpu: "1"
            requests:
              memory: 320Mi
              cpu: "0.1"
  volumeClaimTemplates:
    - metadata:
        name: node-red-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ${STORAGE_CLASS}
        resources:
          requests:
            storage: 1Gi
