apps/base/smart-home/node-red/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: node-red

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`node-red.${DOMAIN_INTERNAL}`)
      kind: Rule
      services:
        - name: node-red
          port: http

  tls:
    secretName: ${CERT_SECRET_INTERNAL}
